Upgrade: Integrated Blogger News module and optimized Technical SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hoài Nam - Hôm nay là Quan Trọng! | contact.io.vn</title>
+    <title>Hoài Nam - Kiến Trúc Sư Số | Xây Dựng Ngôi Nhà Internet & Triết Lý BFH</title>
+    <meta name="description"
+        content="Chào mừng bạn đến với ngôi nhà số của Hoài Nam. Chia sẻ về mô hình kinh doanh tại nhà (BFH), cách xây dựng tự do tài chính, hạnh phúc và bình an.">
+    <meta name="keywords"
+        content="Hoài Nam, Kiến trúc sư số, BFH, Business For Home, Ngôi nhà Internet, Kinh doanh tại nhà, Tự do tài chính">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://contact.io.vn/">
+    <meta property="og:title" content="Hoài Nam - Hôm nay là Quan Trọng!">
+    <meta property="og:description" content="Xây dựng ngôi nhà Internet và tự do tài chính cùng Hoài Nam.">
+    <meta property="og:image" content="https://contact.io.vn/assets/images/profile.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://contact.io.vn/">
+    <meta property="twitter:title" content="Hoài Nam - Hôm nay là Quan Trọng!">
+    <meta property="twitter:description" content="Xây dựng ngôi nhà Internet và tự do tài chính cùng Hoài Nam.">
+    <meta property="twitter:image" content="https://contact.io.vn/assets/images/profile.jpg">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
