UI Fix: Add spacing between News and Contact sections

--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 25px;
+            margin-bottom: 80px;
         }
 
         .news-card {
